// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`return correct shape for initial address entry 1`] = `
Object {
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleCancel": [Function],
  "handleSubmit": [Function],
  "hasDefaultShipping": false,
  "initialValues": Object {
    "country": "US",
    "email": "fry@planet.express",
    "firstname": "Philip",
    "lastname": "Fry",
    "region": null,
  },
  "isLoading": false,
  "isSaving": false,
  "isUpdate": false,
}
`;

exports[`return correct shape for new address and fire create mutation 1`] = `
Object {
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleCancel": [Function],
  "handleSubmit": [Function],
  "hasDefaultShipping": true,
  "initialValues": Object {
    "country": "US",
    "region": null,
  },
  "isLoading": true,
  "isSaving": false,
  "isUpdate": false,
}
`;

exports[`return correct shape for new address and fire create mutation 2`] = `
Object {
  "refetchQueries": Array [
    Object {
      "query": "getCustomerAddressesQuery",
    },
    Object {
      "query": "getCustomerAddressesQuery",
    },
  ],
  "variables": Object {
    "address": Object {
      "country_code": "US",
      "firstname": "Philip",
      "region": Object {
        "region_id": 2,
      },
    },
  },
}
`;

exports[`return correct shape for update address and fire update mutation 1`] = `
Object {
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleCancel": [Function],
  "handleSubmit": [Function],
  "hasDefaultShipping": true,
  "initialValues": Object {
    "city": "New York",
    "country": "US",
    "id": 66,
    "region": null,
  },
  "isLoading": false,
  "isSaving": false,
  "isUpdate": true,
}
`;

exports[`return correct shape for update address and fire update mutation 2`] = `
Object {
  "refetchQueries": Array [
    Object {
      "query": "getCustomerAddressesQuery",
    },
  ],
  "variables": Object {
    "address": Object {
      "country_code": "UK",
      "firstname": "Bender",
      "region": Object {
        "region_id": 5,
      },
    },
    "addressId": 66,
  },
}
`;

exports[`returns Apollo errors for create customer address 1`] = `
Array [
  "createCustomerAddress error",
  undefined,
]
`;

exports[`returns Apollo errors for update customer address 1`] = `
Array [
  undefined,
  "updateCustomerAddress error",
]
`;
